# physbound

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  server.json  smithery.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
docs/: formulas.md
examples/: catching-hallucinations.md  physbound-demo.ipynb
src/physbound/: __init__.py  errors.py  server.py  validators.py
src/physbound/engines/: constants.py  link_budget.py  noise.py  radar.py  shannon.py  units.py
src/physbound/models/: common.py  link_budget.py  noise.py  radar.py  shannon.py
tests/: conftest.py  test_constants.py  test_link_budget.py  test_marketing.py  test_mcp_integration.py  test_noise.py  test_properties.py  test_radar.py  test_server.py  test_shannon.py  test_units.py  test_validators.py
