[project]
name = "physbound"
version = "0.1.1"
description = "Physical Layer Linter — validates RF and physics calculations against hard physical limits"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Robert Jones", email = "jonesrobm@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "fastmcp==2.14.5",
    "pint==0.25.2",
    "scipy==1.15.2",
    "numpy==2.2.3",
    "pydantic>=2.10,<3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov==6.0.0",
    "pre-commit==4.1.0",
    "ruff==0.9.6",
    "mypy==1.15.0",
    "python-dotenv>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/JonesRobM/physbound"
Repository = "https://github.com/JonesRobM/physbound"
Issues = "https://github.com/JonesRobM/physbound/issues"

[project.scripts]
physbound = "physbound.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/physbound"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
